--- a/hw2.Rmd
+++ b/hw2.Rmd
@@ -40,3 +40,11 @@ Error in library(lobstr) : there is no package called 'lobstr' \newline
 Calls: local ... withCallingHandlers -> withVisible -> eval -> eval -> library \newline
 
 Solution: install package ‘lobstr’.
+
+## Error6
+
+Quitting from lines 535-550 (R6.Rmd)  \newline
+Error in (function (cond)  :  \newline
+  error in evaluating the argument 'drv' in selecting a method for function 'dbConnect': there is no package called 'RSQLite' \newline
+  
+Solution: install package ‘RSQLite’.
